--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
          <div class="banner-text">
             <h1 class="responsive-headline">Hi, I'm Alexandre</h1>
             
-            <p>and you are viewer number <a id="counter"></a>.</p> 
+           <!-- <p>and you are viewer number <a id="counter"></a>.</p> -->
             <ul class="social">
                <!-- <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
                <li><a href="https://google.com/"><i class="fa fa-external-link"></i></a></li>
                <li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>
                <li><a href="https://youtube.com/"><i class="fa fa-youtube"></i></a></li> -->
                <li><a href="https://linkedin.com/in/alexandre~pereira"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://github.com/Nebulanomi/Azure-Resume"><i class="fa fa-github"></i></a></li>
+               <li><a href="https://nebulanomi.github.io/"><i class="fa fa-github"></i></a></li>
             </ul>
          </div>
       </div>
@@ -90,11 +90,13 @@
 
             <h2>About me:</h2>
 
-            <p>Hi, My name is Alexandre Pereira and I am training to become a cloud engineer.
-            <br>I have knowledge in networking, security and cloud administration.
-            <br>This Project was made with Azure & GitHub. More information at my <span><a href="https://github.com/Nebulanomi/Azure_Resume">GitHub repo</a></span>.</p>
-            <p>I built this page as part of the <span><a href="https://github.com/madebygps/cgc-azure-resume">Cloud Guru Azure Resume Challenge</a></span>.</p>
-            
+            <p>👋 Hi, I’m Alex, an Azure Cloud & DevOps Engineer passionate about building secure, efficient, and scalable solutions.
+		<br> With a strong foundation in Azure and DevOps practices, I specialize in leveraging tools for Infrastructure as Code (ARM | Bicep | Terraform) and automating workflows to streamline deployments (Azure DevOps | GitHub | GitLab). My experience with Python, Linux, and containerization (Docker | Kubernetes) enables me to create robust and collaborative solutions that support teams and businesses alike.
+		<br> 🔧 Technical Skills:
+		<br> - Cloud & DevOps knowledge: Experience with Azure, Azure DevOps, and IaC tools
+		<br> - Automation & Scripting: Python and containerization for workflow automation and problem-solving
+		<br> - Systems Knowledge: Proficiency in Linux, networking, and security best practices
+		<br> - Version Control & Collaboration: Git and Git based workflows for seamless teamwork and project management        
          </div> <!-- end .main-col -->
       </div>
    </section> <!-- About Section End-->
