--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
 
             <p>👋 Hi, I’m Alex, an Azure Cloud & DevOps Engineer passionate about building secure, efficient, and scalable solutions.
             <br>
-            <br> With a strong foundation in Azure and DevOps practices, I specialize in leveraging tools for Infrastructure as Code (ARM | Bicep | Terraform) and automating workflows to streamline deployments (Azure DevOps | GitHub | GitLab). My experience with Python, Linux, and containerization (Docker | Kubernetes) enables me to create robust and collaborative solutions that support teams and businesses alike.
-            <p>
-            <br> 🔧 Technical Skills:
+            <br> With a strong foundation in Azure and DevOps practices, I specialize in leveraging tools for Infrastructure as Code (ARM | Bicep | Terraform) and automating workflows to streamline deployments (Azure DevOps | GitHub | GitLab).
+            <br> My experience with Python, Linux, and containerization (Docker | Kubernetes) enables me to create robust and collaborative solutions that support teams and businesses alike.
+            
+            <h2> 🔧 Technical Skills:</h2>
             <br>
             <br>  - Cloud & DevOps knowledge: Experience with Azure, Azure DevOps, and IaC tools
             <br>  - Automation & Scripting: Python and containerization for workflow automation and problem-solving
