--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <br> My experience with Python, Linux, and containerization (Docker | Kubernetes) enables me to create robust and collaborative solutions that support teams and businesses alike.
             
             <h2> 🔧 Technical Skills:</h2>
-            <br>
-            <br>  - Cloud & DevOps knowledge: Experience with Azure, Azure DevOps, and IaC tools
+            
+            <p>  - Cloud & DevOps knowledge: Experience with Azure, Azure DevOps, and IaC tools
             <br>  - Automation & Scripting: Python and containerization for workflow automation and problem-solving
             <br>  - Systems Knowledge: Proficiency in Linux, networking, and security best practices
             <br>  - Version Control & Collaboration: Git and Git based workflows for seamless teamwork and project management        
@@ -171,15 +171,15 @@
             <div class="row item">
                <div class="twelve columns">
                   <h3>Euronext</h3>
-                  <p class="info">Service Operations Analyst<span>&bull;</span> <em class="date">May 2023 - September 2023</em></p>
-
-                  <p>
-                     <li>Cloud & Linux administration.</li> 
-                     <li>Analysed and resolved Layer 1 issues related to the operation of Euronext services.</li>
-                     <li>Documented issues & created tickets.</li>
-                     <li>Correlated the appropriate problems to the correct teams for remediation.</li>
-                     <li>Answered calls in English.</li>
-                     <li>Implemented simple SQL and BASH scripts to update existing services.</li>
+                  <p class="info">Service Operations Analyst<span>&bull;</span> <em class="date">May 2023 - November 2023</em></p>
+		  <p>
+                     <li>As a Service Operations Analyst at Euronext, I played a pivotal role in maintaining the operational integrity of critical services by providing efficient issue resolution and proactive system management.
+                     <br>Key Contributions:
+                     <li> - Diagnosed and resolved Level 1 issues related to Euronext services, ensuring minimal downtime and prompt resolution.
+                     <li>- Monitored and analyzed system issues in AWS environments, escalating complex cases to appropriate technical teams.
+                     <li>- Conducted troubleshooting and corrections on Linux servers to maintain optimal performance.
+                     <li>- Developed and implemented Bash scripts to automate routine tasks and improve operational efficiency.
+                     <li>- Managed incident documentation by creating detailed tickets and escalating advanced issues for higher-level resolution.
                   </p>
                </div>
             </div> <!-- item end -->
