--- a/index.html
+++ b/index.html
@@ -170,16 +170,32 @@
 
             <div class="row item">
                <div class="twelve columns">
+                  <h3>Metyis</h3>
+                  <p class="info">Cloud Engineer<span>&bull;</span> <em class="date">December 2023 - Still going</em></p>
+		  <p>
+                     <li> As a Cloud Engineer at Metyis, I specialize in designing, implementing, and maintaining scalable and resilient cloud solutions on the Microsoft Azure platform. My responsibilities encompass a range of tasks that ensure optimal performance, security, and cost efficiency.
+                     <br> Key Contributions:
+                     <li> - Architecting and deploying robust cloud solutions tailored to meet business and technical requirements.
+                     <li> - Managing and optimizing virtual machines, containers, and serverless applications to achieve seamless operations.
+                     <li> - Enhancing system reliability by implementing high-availability strategies and adhering to security best practices.
+                     <li> - Utilizing Azure DevOps to establish efficient CI/CD pipelines, streamlining the development and deployment lifecycle.
+                     <li> - Proactively monitoring, troubleshooting, and fine-tuning cloud environments to align with performance goals and cost-effectiveness.
+                  </p>
+               </div>
+            </div> <!-- item end -->
+		
+            <div class="row item">
+               <div class="twelve columns">
                   <h3>Euronext</h3>
                   <p class="info">Service Operations Analyst<span>&bull;</span> <em class="date">May 2023 - November 2023</em></p>
 		  <p>
-                     <li>As a Service Operations Analyst at Euronext, I played a pivotal role in maintaining the operational integrity of critical services by providing efficient issue resolution and proactive system management.
-                     <br>Key Contributions:
+                     <li> As a Service Operations Analyst at Euronext, I played a pivotal role in maintaining the operational integrity of critical services by providing efficient issue resolution and proactive system management.
+                     <br> Key Contributions:
                      <li> - Diagnosed and resolved Level 1 issues related to Euronext services, ensuring minimal downtime and prompt resolution.
-                     <li>- Monitored and analyzed system issues in AWS environments, escalating complex cases to appropriate technical teams.
-                     <li>- Conducted troubleshooting and corrections on Linux servers to maintain optimal performance.
-                     <li>- Developed and implemented Bash scripts to automate routine tasks and improve operational efficiency.
-                     <li>- Managed incident documentation by creating detailed tickets and escalating advanced issues for higher-level resolution.
+                     <li> - Monitored and analyzed system issues in AWS environments, escalating complex cases to appropriate technical teams.
+                     <li> - Conducted troubleshooting and corrections on Linux servers to maintain optimal performance.
+                     <li> - Developed and implemented Bash scripts to automate routine tasks and improve operational efficiency.
+                     <li> - Managed incident documentation by creating detailed tickets and escalating advanced issues for higher-level resolution.
                   </p>
                </div>
             </div> <!-- item end -->
@@ -189,20 +205,19 @@
                   <h3>DECSIS</h3>
                   <p class="info">NOC Technician<span>&bull;</span> <em class="date">March 2021 - April 2023</em></p>
                   <p>
-                     <li>Network administration.</li>
-                     <li>Provided front-line technical support.</li>
-                     <li>Configured network appliances (Switches, Routers, Firewalls, APs).</li>
-                     <li>Monitored client devices and remediated issues on time, according to SLA.</li>
-                     <li>Documented IT tasks for internal clients.</li>
-		     <li>In case issues were related to hardware or was something more complex I would pass the information to more senior technicians.</li>
+                     <li> As a Network Operations Center (NOC) Technician at DECSIS, I was responsible for managing and maintaining the performance, security, and reliability of both company and client networks. My role involved proactive monitoring, troubleshooting, and configuration of network systems to ensure seamless operations.
+                     <br> Key Contributions:
+                     <li> - Administered and monitored the company’s network infrastructure as well as client networks, ensuring compliance with SLAs.
+                     <li> - Diagnosed and remediated issues on client devices, escalating advanced problems to senior technicians when necessary.
+                     <li> - Configured and optimized network appliances, including firewalls and switches, to enhance network performance and security.
+                     <li> - Designed and managed virtualized environments and implemented regular backup processes to ensure data integrity and system availability.
+                     <li> - Correlated system logs and monitored devices to identify and resolve potential issues proactively.
+                     <li> - Documented IT processes and tasks to maintain clear communication and records for internal clients.
                   </p>
                </div>
             </div> <!-- item end -->
-         
          </div> <!-- item end -->
-
       </div> <!-- End Work -->
-
    </section> <!-- Resume Section End-->
 
    <!-- footer
@@ -247,5 +262,5 @@
    <script src="js/init.js"></script>
 
 </body>
-
+	
 </html>
