--- a/index.html
+++ b/index.html
@@ -89,14 +89,12 @@
          <div class="nine columns main-col">
 
             <h2>About me:</h2>
-
             <p>👋 Hi, I’m Alex, an Azure Cloud & DevOps Engineer passionate about building secure, efficient, and scalable solutions.
             <br>
             <br> With a strong foundation in Azure and DevOps practices, I specialize in leveraging tools for Infrastructure as Code (ARM | Bicep | Terraform) and automating workflows to streamline deployments (Azure DevOps | GitHub | GitLab).
             <br> My experience with Python, Linux, and containerization (Docker | Kubernetes) enables me to create robust and collaborative solutions that support teams and businesses alike.
             
             <h2> 🔧 Technical Skills:</h2>
-            
             <p>  - Cloud & DevOps knowledge: Experience with Azure, Azure DevOps, and IaC tools
             <br>  - Automation & Scripting: Python and containerization for workflow automation and problem-solving
             <br>  - Systems Knowledge: Proficiency in Linux, networking, and security best practices
@@ -173,7 +171,7 @@
                   <h3>Metyis</h3>
                   <p class="info">Cloud Engineer<span>&bull;</span> <em class="date">December 2023 - Still going</em></p>
 		  <p>
-                     <li> As a Cloud Engineer at Metyis, I specialize in designing, implementing, and maintaining scalable and resilient cloud solutions on the Microsoft Azure platform. My responsibilities encompass a range of tasks that ensure optimal performance, security, and cost efficiency.
+                     <p> As a Cloud Engineer at Metyis, I specialize in designing, implementing, and maintaining scalable and resilient cloud solutions on the Microsoft Azure platform. My responsibilities encompass a range of tasks that ensure optimal performance, security, and cost efficiency.
                      <br> Key Contributions:
                      <li> - Architecting and deploying robust cloud solutions tailored to meet business and technical requirements.
                      <li> - Managing and optimizing virtual machines, containers, and serverless applications to achieve seamless operations.
@@ -189,7 +187,7 @@
                   <h3>Euronext</h3>
                   <p class="info">Service Operations Analyst<span>&bull;</span> <em class="date">May 2023 - November 2023</em></p>
 		  <p>
-                     <li> As a Service Operations Analyst at Euronext, I played a pivotal role in maintaining the operational integrity of critical services by providing efficient issue resolution and proactive system management.
+                     <p> As a Service Operations Analyst at Euronext, I played a pivotal role in maintaining the operational integrity of critical services by providing efficient issue resolution and proactive system management.
                      <br> Key Contributions:
                      <li> - Diagnosed and resolved Level 1 issues related to Euronext services, ensuring minimal downtime and prompt resolution.
                      <li> - Monitored and analyzed system issues in AWS environments, escalating complex cases to appropriate technical teams.
@@ -205,7 +203,7 @@
                   <h3>DECSIS</h3>
                   <p class="info">NOC Technician<span>&bull;</span> <em class="date">March 2021 - April 2023</em></p>
                   <p>
-                     <li> As a Network Operations Center (NOC) Technician at DECSIS, I was responsible for managing and maintaining the performance, security, and reliability of both company and client networks. My role involved proactive monitoring, troubleshooting, and configuration of network systems to ensure seamless operations.
+                     <p> As a Network Operations Center (NOC) Technician at DECSIS, I was responsible for managing and maintaining the performance, security, and reliability of both company and client networks. My role involved proactive monitoring, troubleshooting, and configuration of network systems to ensure seamless operations.
                      <br> Key Contributions:
                      <li> - Administered and monitored the company’s network infrastructure as well as client networks, ensuring compliance with SLAs.
                      <li> - Diagnosed and remediated issues on client devices, escalating advanced problems to senior technicians when necessary.
