--- a/index.html
+++ b/index.html
@@ -58,10 +58,6 @@
             
            <!-- <p>and you are viewer number <a id="counter"></a>.</p> -->
             <ul class="social">
-               <!-- <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://google.com/"><i class="fa fa-external-link"></i></a></li>
-               <li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="https://youtube.com/"><i class="fa fa-youtube"></i></a></li> -->
                <li><a href="https://linkedin.com/in/alexandre~pereira"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://nebulanomi.github.io/"><i class="fa fa-github"></i></a></li>
             </ul>
@@ -95,14 +91,13 @@
             <br> My experience with Python, Linux, and containerization (Docker | Kubernetes) enables me to create robust and collaborative solutions that support teams and businesses alike.
             
             <h2> 🔧 Technical Skills:</h2>
-            <p>  - Cloud & DevOps knowledge: Experience with Azure, Azure DevOps, and IaC tools
-            <br>  - Automation & Scripting: Python and containerization for workflow automation and problem-solving
-            <br>  - Systems Knowledge: Proficiency in Linux, networking, and security best practices
-            <br>  - Version Control & Collaboration: Git and Git based workflows for seamless teamwork and project management        
+            <li> Cloud & DevOps knowledge: Experience with Azure, Azure DevOps, and IaC tools
+            <li> Automation & Scripting: Python and containerization for workflow automation and problem-solving
+            <li> Systems Knowledge: Proficiency in Linux, networking, and security best practices
+            <li> Version Control & Collaboration: Git and Git based workflows for seamless teamwork and project management        
          </div> <!-- end .main-col -->
       </div>
    </section> <!-- About Section End-->
-
 
    <!-- Resume Section
    ================================================== -->
@@ -173,11 +168,11 @@
 		  <p>
                      <p> As a Cloud Engineer at Metyis, I specialize in designing, implementing, and maintaining scalable and resilient cloud solutions on the Microsoft Azure platform. My responsibilities encompass a range of tasks that ensure optimal performance, security, and cost efficiency.
                      <br> Key Contributions:
-                     <li> - Architecting and deploying robust cloud solutions tailored to meet business and technical requirements.
-                     <li> - Managing and optimizing virtual machines, containers, and serverless applications to achieve seamless operations.
-                     <li> - Enhancing system reliability by implementing high-availability strategies and adhering to security best practices.
-                     <li> - Utilizing Azure DevOps to establish efficient CI/CD pipelines, streamlining the development and deployment lifecycle.
-                     <li> - Proactively monitoring, troubleshooting, and fine-tuning cloud environments to align with performance goals and cost-effectiveness.
+                     <li> Architecting and deploying robust cloud solutions tailored to meet business and technical requirements.
+                     <li> Managing and optimizing virtual machines, containers, and serverless applications to achieve seamless operations.
+                     <li> Enhancing system reliability by implementing high-availability strategies and adhering to security best practices.
+                     <li> Utilizing Azure DevOps to establish efficient CI/CD pipelines, streamlining the development and deployment lifecycle.
+                     <li> Proactively monitoring, troubleshooting, and fine-tuning cloud environments to align with performance goals and cost-effectiveness.
                   </p>
                </div>
             </div> <!-- item end -->
@@ -189,11 +184,11 @@
 		  <p>
                      <p> As a Service Operations Analyst at Euronext, I played a pivotal role in maintaining the operational integrity of critical services by providing efficient issue resolution and proactive system management.
                      <br> Key Contributions:
-                     <li> - Diagnosed and resolved Level 1 issues related to Euronext services, ensuring minimal downtime and prompt resolution.
-                     <li> - Monitored and analyzed system issues in AWS environments, escalating complex cases to appropriate technical teams.
-                     <li> - Conducted troubleshooting and corrections on Linux servers to maintain optimal performance.
-                     <li> - Developed and implemented Bash scripts to automate routine tasks and improve operational efficiency.
-                     <li> - Managed incident documentation by creating detailed tickets and escalating advanced issues for higher-level resolution.
+                     <li> Diagnosed and resolved Level 1 issues related to Euronext services, ensuring minimal downtime and prompt resolution.
+                     <li> Monitored and analyzed system issues in AWS environments, escalating complex cases to appropriate technical teams.
+                     <li> Conducted troubleshooting and corrections on Linux servers to maintain optimal performance.
+                     <li> Developed and implemented Bash scripts to automate routine tasks and improve operational efficiency.
+                     <li> Managed incident documentation by creating detailed tickets and escalating advanced issues for higher-level resolution.
                   </p>
                </div>
             </div> <!-- item end -->
@@ -205,12 +200,12 @@
                   <p>
                      <p> As a Network Operations Center (NOC) Technician at DECSIS, I was responsible for managing and maintaining the performance, security, and reliability of both company and client networks. My role involved proactive monitoring, troubleshooting, and configuration of network systems to ensure seamless operations.
                      <br> Key Contributions:
-                     <li> - Administered and monitored the company’s network infrastructure as well as client networks, ensuring compliance with SLAs.
-                     <li> - Diagnosed and remediated issues on client devices, escalating advanced problems to senior technicians when necessary.
-                     <li> - Configured and optimized network appliances, including firewalls and switches, to enhance network performance and security.
-                     <li> - Designed and managed virtualized environments and implemented regular backup processes to ensure data integrity and system availability.
-                     <li> - Correlated system logs and monitored devices to identify and resolve potential issues proactively.
-                     <li> - Documented IT processes and tasks to maintain clear communication and records for internal clients.
+                     <li> Administered and monitored the company’s network infrastructure as well as client networks, ensuring compliance with SLAs.
+                     <li> Diagnosed and remediated issues on client devices, escalating advanced problems to senior technicians when necessary.
+                     <li> Configured and optimized network appliances, including firewalls and switches, to enhance network performance and security.
+                     <li> Designed and managed virtualized environments and implemented regular backup processes to ensure data integrity and system availability.
+                     <li> Correlated system logs and monitored devices to identify and resolve potential issues proactively.
+                     <li> Documented IT processes and tasks to maintain clear communication and records for internal clients.
                   </p>
                </div>
             </div> <!-- item end -->
@@ -227,10 +222,6 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <!-- <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://google.com/"><i class="fa fa-external-link"></i></a></li>
-               <li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="https://youtube.com/"><i class="fa fa-youtube"></i></a></li> -->
                <li><a href="https://linkedin.com/in/alexandre~pereira"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://github.com/Nebulanomi/Azure-Resume"><i class="fa fa-github"></i></a></li>
             </ul>
