--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
          <div class="nine columns main-col">
 
-            <h2>About me:</h2>
-            <p>👋 Hi, I’m Alex, an Azure Cloud & DevOps Engineer passionate about building secure, efficient, and scalable solutions.
+            <h2>👋 About me:</h2>
+            <p> I’m Alex, an Azure Cloud & DevOps Engineer passionate about building secure, efficient, and scalable solutions.
             <br>
             <br> With a strong foundation in Azure and DevOps practices, I specialize in leveraging tools for Infrastructure as Code (ARM | Bicep | Terraform) and automating workflows to streamline deployments (Azure DevOps | GitHub | GitLab).
             <br> My experience with Python, Linux, and containerization (Docker | Kubernetes) enables me to create robust and collaborative solutions that support teams and businesses alike.
