--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">Hi, I'm Alexandre</h1>
+            <h1 class="responsive-headline">I am Alexandre Pereira</h1>
             
            <!-- <p>and you are viewer number <a id="counter"></a>.</p> -->
             <ul class="social">
@@ -85,8 +85,7 @@
          <div class="nine columns main-col">
 
             <h2>👋 About me:</h2>
-            <p> I’m Alex, an Azure Cloud & DevOps Engineer passionate about building secure, efficient, and scalable solutions.
-            <br>
+            <p> An Azure Cloud & DevOps Engineer passionate about building secure, efficient, and scalable solutions.
             <br> With a strong foundation in Azure and DevOps practices, I specialize in leveraging tools for Infrastructure as Code (ARM | Bicep | Terraform) and automating workflows to streamline deployments (Azure DevOps | GitHub | GitLab).
             <br> My experience with Python, Linux, and containerization (Docker | Kubernetes) enables me to create robust and collaborative solutions that support teams and businesses alike.
             
