--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I am Alexandre Pereira</h1>
+            <h1 class="responsive-headline">I'm Alexandre Pereira,</h1>
             
            <!-- <p>and you are viewer number <a id="counter"></a>.</p> -->
             <ul class="social">
