--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
 
             <div class="row item">
                <div class="twelve columns">
+                  <h3>Azure Certified DevOps Engineer Expert</h3>
+                  <p class="info"><em class="date">January 2025</em></p>
+               </div>
+            </div> <!-- item end -->
+		
+            <div class="row item">
+               <div class="twelve columns">
                   <h3>Azure Certified Administrator Associate</h3>
                   <p class="info"><em class="date">September 2023</em></p>
                </div>
