--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Alexandre Pereira,</h1>
+            <h1 class="responsive-headline">Howdy👋,</h1>
             
            <!-- <p>and you are viewer number <a id="counter"></a>.</p> -->
             <ul class="social">
@@ -84,8 +84,8 @@
 
          <div class="nine columns main-col">
 
-            <h2>👋 About me:</h2>
-            <p> An Azure Cloud & DevOps Engineer passionate about building secure, efficient, and scalable solutions.
+            <h2>About me:</h2>
+            <p> 🧑‍💻 An Azure Cloud & DevOps Engineer passionate about building secure, efficient, and scalable solutions.
             <br> With a strong foundation in Azure and DevOps practices, I specialize in leveraging tools for Infrastructure as Code (ARM | Bicep | Terraform) and automating workflows to streamline deployments (Azure DevOps | GitHub | GitLab).
             <br> My experience with Python, Linux, and containerization (Docker | Kubernetes) enables me to create robust and collaborative solutions that support teams and businesses alike.
             
@@ -123,13 +123,6 @@
                <div class="twelve columns">
                   <h3>Azure Certified Administrator Associate</h3>
                   <p class="info"><em class="date">September 2023</em></p>
-               </div>
-            </div> <!-- item end -->
-
-            <div class="row item">
-               <div class="twelve columns">
-                  <h3>NSE 3 Network Security Associate</h3>
-                  <p class="info"><em class="date">January 2023</em></p>
                </div>
             </div> <!-- item end -->
 
