--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">Howdy👋,</h1>
+            <h1 class="responsive-headline">This is Alex!</h1>
             
            <!-- <p>and you are viewer number <a id="counter"></a>.</p> -->
             <ul class="social">
@@ -180,7 +180,7 @@
             <div class="row item">
                <div class="twelve columns">
                   <h3>Euronext</h3>
-                  <p class="info">Service Operations Analyst<span>&bull;</span> <em class="date">May 2023 - November 2023</em></p>
+                  <p class="info">Service Operations Analyst<span>&bull;</span> <em class="date">May 2023 - August 2023</em></p>
 		  <p>
                      <p> As a Service Operations Analyst at Euronext, I played a pivotal role in maintaining the operational integrity of critical services by providing efficient issue resolution and proactive system management.
             	     <br>
