--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
             <h2>About me:</h2>
             <p> 🧑‍💻 An Azure Cloud & DevOps Engineer passionate about building secure, efficient, and scalable solutions.
-            <br> With a strong foundation in Azure and DevOps practices, I specialize in leveraging tools for Infrastructure as Code (ARM | Bicep | Terraform) and automating workflows to streamline deployments (Azure DevOps | GitHub | GitLab).
-            <br> My experience with Python, Linux, and containerization (Docker | Kubernetes) enables me to create robust and collaborative solutions that support teams and businesses alike.
+            <br> I have a strong interest in Azure and DevOps, I have knowledge in leveraging tools for Infrastructure as Code (Terraform) and automating workflows to streamline deployments (Azure DevOps | GitHub | GitLab).
+            <br> I have experience with Python, Linux, and containerization (Docker | Kubernetes) which enables me to create robust and collaborative solutions that support teams and businesses alike.
             
             <h2> 🔧 Technical Skills:</h2>
             <li> Cloud & DevOps knowledge: Experience with Azure, Azure DevOps, and IaC tools
@@ -255,3 +255,4 @@
 </body>
 	
 </html>
+
