--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">Hey, this is Alex.</h1>
+            <h1 class="responsive-headline">Hello there👋</h1>
             
            <!-- <p>and you are viewer number <a id="counter"></a>.</p> -->
             <ul class="social">
@@ -255,4 +255,5 @@
 </body>
 	
 </html>
+
 
